--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "jenkins-jobs-audit",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "sample-redux",
+  "version": "0.0.0",
+  "description": "Sample Redux",
   "scripts": {
-    "start": "webpack-dev-server --content-base build --port 3333 --colors --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eberhara/jenkins-jobs-audit.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eberhara/jenkins-jobs-audit/issues"
-  },
-  "homepage": "https://github.com/eberhara/jenkins-jobs-audit#readme",
-  "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "html-webpack-plugin": "^2.22.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "start": "node server.js"
   },
   "dependencies": {
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "babel-polyfill": "^6.3.14",
+    "humps": "^0.6.0",
+    "isomorphic-fetch": "^2.1.1",
+    "lodash": "^4.0.0",
+    "normalizr": "^2.0.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.2.1",
+    "react-router": "2.0.0",
+    "react-router-redux": "^4.0.0-rc.1",
+    "redux": "^3.2.1",
+    "redux-logger": "^2.4.0",
+    "redux-thunk": "^1.0.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.1.1",
+    "concurrently": "^0.1.1",
+    "express": "^4.13.3",
+    "redux-devtools": "^3.1.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.3",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.9.1"
   }
 }
